--- a/mongo-app.yaml
+++ b/mongo-app.yaml
@@ -20,9 +20,19 @@ spec:
             limits:
               memory: "100Mi"
               cpu: "0.5m"
+          env:
+            - name: ME_CONFIG_MONGODB_ADMINUSERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: mongo-secret
+                  key: mongo-user
+            - name: ME_CONFIG_MONGODB_ADMINPASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mongo-secret
+                  key: mongo-password
           ports:
             - containerPort: 27017
-
 ---
 apiVersion: v1
 kind: Service
